Fix Add Reaction context menu item alignment

--- a/src/modules/icons/_context_menu.scss
+++ b/src/modules/icons/_context_menu.scss
@@ -449,7 +449,8 @@
 
 // Message
 .theme-dark .menu-1QACrS .item-1OdjEX{
-    &[id="message-add-reaction"]::before{
+    &[id="message-add-reaction-0"]::before{
+        // Intentionally not displaying an icon as it is a submenu, and would also require icon reuse
         content: "\E9CE"; // Unknown
         visibility: hidden;
     }
